RESOLVED FIXED285439
[JSC] iterationCount should not be zero in LoopUnrollingPhase
https://bugs.webkit.org/show_bug.cgi?id=285439
Summary [JSC] iterationCount should not be zero in LoopUnrollingPhase
Yijia Huang
Reported 2025-01-06 09:53:53 PST
Attachments
Yijia Huang
Comment 1 2025-01-06 09:56:09 PST
EWS
Comment 2 2025-01-06 13:01:01 PST
Committed 288482@main (dd99022353b4): <https://commits.webkit.org/288482@main> Reviewed commits have been landed. Closing PR #38568 and removing active labels.
Yusuke Suzuki
Comment 3 2025-01-07 19:18:04 PST
*** Bug 285082 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.