[JSC] iterationCount should not be zero in LoopUnrollingPhase https://bugs.webkit.org/show_bug.cgi?id=285439 rdar://142274884

Reviewed by Keith Miller and Yusuke Suzuki.

* Source/JavaScriptCore/dfg/DFGLoopUnrollingPhase.cpp:
(JSC::DFG::LoopUnrollingPhase::identifyInductionVariable):
(JSC::DFG::LoopUnrollingPhase::unrollLoop):

Canonical link: https://commits.webkit.org/288482@main